# claude-cowboy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  main.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
agents/: lasso.md
commands/: deputized.md  lasso.md  wt_merge_to_local.md
hooks/: status-hook.sh
lib/: __init__.py  cleanup.py  config.py  cowboy_cli.py  git_worktree.py  notifications.py  orchestration.py  orchestration_cli.py  session_browser.py  session_context.py  session_directories.py  session_discovery.py  session_preview.py  session_registry.py  status_analyzer.py  status_line.py  tmux_manager.py  wait_mode.py
plugins/cowboy/.claude-plugin/: plugin.json
plugins/cowboy/agents/: lasso.md
plugins/cowboy/commands/: lasso.md  outlaw.md  posse.md  sessions.md  wt_merge_to_local.md
plugins/cowboy/hooks/: hooks.json  status-hook.sh  status_line.sh
plugins/cowboy/skills/: lassoed.md
scripts/: action_menu.sh  browse.sh  create-claude-user.sh  delete-claude-user.sh  execute_action.sh  install-dev.sh  new_session.sh  permission-hook.sh  preview.sh  uninstall-dev.sh
tests/: __init__.py  test_config.py  test_session_discovery.py  test_status_analyzer.py
