[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-cowboy"
version = "0.1.0"
description = "Monitor and display active Claude Code sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cowboy = "lib.cowboy_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]
